...
    
    private lazy var vStackView = UIStackView()
    private lazy var hStackView = UIStackView()
    
    private lazy var profileImageView = UIImageView()
    
    private lazy var nameLabel: UILabel = {
        let label = UILabel()
        label.font = Theme.font(style: .bold23)
        label.textColor = Theme.color(usage: .ypWhite)
        return label
    }()
    
...
        let label = UILabel()
        label.font = Theme.font(style: .regular13)
        label.textColor = Theme.color(usage: .ypWhite)
        return label
    }()
    
    private lazy var logoutButton: UIButton = {
        let button = UIButton(type: .custom)
        let image = Theme.image(kind: .exitIcon)
        button.setBackgroundImage(image, for: .normal)
        button.tintColor = Theme.color(usage: .ypRed)
        return button
    }()
...
