...

final class ImagesListViewController: UIViewController {
	private let presenter: IImagesListViewOutput
	private let adapter: ImagesListTableViewAdapter

	// MARK: - UI
	private lazy var tableView = UITableView()

	private lazy var refreshControl = UIRefreshControl()
	private var hasRefreshed = false {
		didSet {
			reloadView()
		}
...
