...
	private lazy var webView: WKWebView = {
		let view = WKWebView()
		view.backgroundColor = Theme.color(usage: .ypWhite)
		return view
	}()

	private lazy var backButton: UIButton = {
		let button = UIButton()
		button.setImage(Theme.image(kind: .backwardIcon), for: .normal)
		button.tintColor = Theme.color(usage: .ypBlack)
		return button
	}()

...
